--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-  <div id="app"></div>
+  <div id="app">
+    <canvas id="renderCanvas" touch-action="none"></canvas>
+  </div>
   <script type="module" src="/src/main.ts"></script>
 </body>
 
